# SessionTracker

./: README.md  SessionTracker.exe - Shortcut.lnk
launcher/: SessionTracker.spec  launcher.py
launcher/lvenv/: pyvenv.cfg
launcher/lvenv/Scripts/: activate  activate.bat
templates/functionality/: record_session.js
timetracker/: .env  .gitignore  courses.py  main.py  mongo.py  pyproject.toml  routes.py
timetracker/templates/: all_sessions.html  analytics.html  courses.html  home.html  record_session.html
timetracker/templates/functionality/: all_sessions.js  analytics.js  courses.js  home.js  record_session.js
