[project]
name = "timetracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic>=2.11.5",
    "pyinstaller>=6.14.0",
    "pymongo>=4.13.0",
    "uvicorn>=0.34.3",
]
